--- a/index.html
+++ b/index.html
@@ -69,8 +69,14 @@
 <body>
 
   <h1>Autism Speech Task: Video Prompts</h1>
-  <p class="subheading">Clinician Reference Portal · Observational Prompts for Autism Intervention</p>
-
+  <p class="subheading">
+    Generated using the 
+    <a href="https://github.com/Wan-Video/Wan2.1" target="_blank" style="color: #0a3d62; text-decoration: none; font-weight: bold;">
+      Wan2.1
+    </a> 
+    video synthesis model.
+  </p>
+  
   <div id="container"></div>
 
   <script>
